# premint-airdrop

./: Cargo.toml
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  pda.rs  processor.rs  state.rs  util.rs
