[package]
name = "premint-airdrop"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program="~1.10.28"
thiserror = "~1.0.31"
arrayref = "~0.3.6"

[dev-dependencies]
solana-sdk="~1.10.28"
solana-program-test="~1.10.28"

[lib]
crate-type=["cdylib", "lib"]