[package]
name = "premint-airdrop"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program="~1.10.28"
thiserror = "~1.0.31"
arrayref = "~0.3.6"
num-traits = "~0.2.15"
num-derive = "~0.3.3"
spl-token = { version = "~3.3.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "~1.0.5", features = ["no-entrypoint"] }
metaplex-token-metadata = { version = "=0.0.1", features = ["no-entrypoint"] }

[dev-dependencies]
solana-sdk="~1.10.28"
solana-program-test="~1.10.28"

[lib]
crate-type=["cdylib", "lib"]